--- a/app/networking.html
+++ b/app/networking.html
@@ -36,21 +36,21 @@
         <div class="col-xs-offset-5 col-xs-2 index-icon networking-icon"></div>
       </div>
       <div class="row">
-          <p class="networking-desc">Among our main solutions we offer analysis, logistics and implementation of Local Area Networks (LAN), wireless networks (Wireless) and the infrastructure to configure Virtual Private Networks (VPN) in businesses and homes. We install all types of networks, Wired (UTP, fiber) or wireless (WI-FI).</p>
+          <p class="networking-desc text-center">Among our main solutions we offer analysis, logistics and implementation of Local Area Networks (LAN), wireless networks (Wireless) and the infrastructure to configure Virtual Private Networks (VPN) in businesses and homes. We install all types of networks, Wired (UTP, fiber) or wireless (WI-FI).</p>
       </div>
+      <br>
+      <br>
+      <br>
       <div class="row">
           <div class="col-xs-7 network-brands">
             <div class="row">
               <div class="col-xs-4">
-                <span class="helper"></span>
                 <img src="/img/Network Brands/2000px-Cisco_logo.png" alt="Cisco Logo">
               </div>
               <div class="col-xs-4">
-                <span class="helper"></span>
                 <img src="/img/Network Brands/wi-fi logo.png" alt="Wi-Fi Logo">
               </div>
               <div class="col-xs-4">
-                <span class="helper"></span>
                 <img src="/img/Network Brands/D-LINK.png" alt="D-LINK Logo">
               </div>
             </div>
