--- a/app/it-services-and-support.html
+++ b/app/it-services-and-support.html
@@ -36,23 +36,23 @@
         <div class="col-xs-offset-5 col-xs-2 index-icon it-icon"></div>
       </div>
       <div class="row">
-        <div class="col-xs-4">
-            <h2>Service Desk</h2>
-            <p class="it-service-desk-description">Technology Services are continuously evolving and Service Desk is the practice that sets the standard in this regard. The most competitive companies in the domestic and international markets have chosen for its adaptability, versatility and the ability to manage and offered to settle potential impact of comprehensive, planned and methodical way. Its features are:</p>
-            <ul>
-              <li class="it-service-desk-b1">Establishment of a single point of contact, real or virtual</li>
-              <li class="it-service-desk-b2">Home Management Service Level</li>
-              <li class="it-service-desk-b3">Using multiple access channels</li>
-              <li class="it-service-desk-b4">Emphasis on track</li>
-              <li class="it-service-desk-b5">Reporting and monitoring activities</li>
-              <li class="it-service-desk-b6">Integration of the different areas of IT</li>
-              <li class="it-service-desk-b7">Philosophy of continuous improvement</li>
-              <li class="it-service-desk-b8">Proactive response</li>
-              <li class="it-service-desk-b9">The customer gets what demand.</li>
-            </ul>
-        </div>
-        <div class="col-xs-4">
-          <div class="container-fluid">
+        <div class="col-xs-8 it-helper">
+          <div class="col-xs-6">
+              <h2>Service Desk</h2>
+              <p class="it-service-desk-description">Technology Services are continuously evolving and Service Desk is the practice that sets the standard in this regard. The most competitive companies in the domestic and international markets have chosen for its adaptability, versatility and the ability to manage and offered to settle potential impact of comprehensive, planned and methodical way. Its features are:</p>
+              <ul>
+                <li class="it-service-desk-b1">Establishment of a single point of contact, real or virtual</li>
+                <li class="it-service-desk-b2">Home Management Service Level</li>
+                <li class="it-service-desk-b3">Using multiple access channels</li>
+                <li class="it-service-desk-b4">Emphasis on track</li>
+                <li class="it-service-desk-b5">Reporting and monitoring activities</li>
+                <li class="it-service-desk-b6">Integration of the different areas of IT</li>
+                <li class="it-service-desk-b7">Philosophy of continuous improvement</li>
+                <li class="it-service-desk-b8">Proactive response</li>
+                <li class="it-service-desk-b9">The customer gets what demand.</li>
+              </ul>
+          </div>
+          <div class="col-xs-6">
             <div class="row">
               <h2>&nbsp;</h2>
               <div class="col-xs-12 text-center">
