--- a/public/index.html
+++ b/public/index.html
@@ -1,111 +1,3 @@
-<!doctype html>
-<html lang="">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="description" content="">
-  <title>gadget_tech</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-  <!-- inject:css --> 
-  <link rel="stylesheet" href="css/app.css"> 
-  <!-- endinject -->
-
-</head>
-
-<body>
-  <!--[if lt IE 10]>
-      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
-  <div id="header"></div>
-  <div id="carousel"></div> 
-  <div id="main-content" class="container">
-    <div class="row">
-      <div class="col-xs-10 col-xs-offset-1">
-        <div class="row">
-          <div class="col-xs-12">
-            <div class="col-xs-4 col-xs-offset-4">
-              <img src="img/logo_texto.png" alt="Gadget Technology" class="img-full">
-            </div>
-          </div>
-        </div>
-        <div class="row main-title">
-          <h3>
-          <p class="home-description text-center">We offer solutions, services and technology products, through an ingenious organization adaptive to the needs of your company, business, home or space, with the ability to provide the most innovative and practical in any of the following areas:</p>
-        </h3>
-          <br>
-        </div>
-        <div class="row">
-          <div class="col-xs-12">
-            <div class="section">
-              <a href="/it-services-and-support.html">
-                <h3><span class="it-services-title"></span></h3>
-              </a>
-            </div>
-            <div class="section">
-              <a href="/networking.html">
-                <h3><span class="networking-title"></span></h3>
-              </a>
-            </div>
-            <div class="section">
-              <a href="/surveillance-cameras.html">
-                <h3><span class="surveillance-title"></span></h3>
-              </a>
-            </div>
-            <div class="section">
-              <a href="/audio-and-video.html">
-                <h3><span class="audio-title"></span></h3>
-              </a>
-            </div>
-            <div class="section">
-              <a href="/automation.html">
-                <h3><span class="automation-title"></span></h3>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12">
-            <div class="section">
-              <div class="col-xs-12 index-icon it-icon"></div>
-            </div>
-            <div class="section">
-              <div class="col-xs-12 index-icon networking-icon"></div>
-            </div>
-            <div class="section">
-              <div class="col-xs-12 index-icon surveillance-icon"></div>
-            </div>
-            <div class="section">
-              <div class="col-xs-12 index-icon audio-icon"></div>
-            </div>
-            <div class="section">
-              <div class="col-xs-12 index-icon automation-icon"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-12">
-      <footer id="footer" class="footer"></footer>
-    </div>
-  </div>
-
-
-
-
-  <!-- bower:js -->
-  <script src="bower_components/jquery/dist/jquery.js"></script>
-  <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
-  <!-- endbower -->
-
-  <!-- inject:js -->
-  <script src="scripts/app.js"></script>
-  <!-- endinject -->
-</body>
-
-</html>
+<!doctype html><html><head><meta charset=utf-8><meta name=description><title>gadget_tech</title><meta name=viewport content="width=device-width, initial-scale=1.0"><link rel=apple-touch-icon href=apple-touch-icon.png><link rel=stylesheet href=css/app.css></head><body><!--[if lt IE 10]>
+ <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+ <![endif]--><div id=header></div><div id=carousel></div><div id=main-content class=container><div class=row><div class="col-xs-10 col-xs-offset-1"><div class=row><div class=col-xs-12><div class="col-xs-4 col-xs-offset-4"><img src=img/logo_texto.png alt="Gadget Technology" class=img-full></div></div></div><div class="row main-title"><h3><p class="home-description text-center">We offer solutions, services and technology products, through an ingenious organization adaptive to the needs of your company, business, home or space, with the ability to provide the most innovative and practical in any of the following areas:</p></h3><br></div><div class=row><div class=col-xs-12><div class=section><a href=/it-services-and-support.html><h3><span class=it-services-title></span></h3></a></div><div class=section><a href=/networking.html><h3><span class=networking-title></span></h3></a></div><div class=section><a href=/surveillance-cameras.html><h3><span class=surveillance-title></span></h3></a></div><div class=section><a href=/audio-and-video.html><h3><span class=audio-title></span></h3></a></div><div class=section><a href=/automation.html><h3><span class=automation-title></span></h3></a></div></div></div><div class=row><div class=col-xs-12><div class=section><div class="col-xs-12 index-icon it-icon"></div></div><div class=section><div class="col-xs-12 index-icon networking-icon"></div></div><div class=section><div class="col-xs-12 index-icon surveillance-icon"></div></div><div class=section><div class="col-xs-12 index-icon audio-icon"></div></div><div class=section><div class="col-xs-12 index-icon automation-icon"></div></div></div></div></div></div></div><div class=row><div class=col-xs-12><footer id=footer class=footer></footer></div></div><script src=bower_components/jquery/dist/jquery.js></script><script src=bower_components/bootstrap-sass/assets/javascripts/bootstrap.js></script><script src=scripts/app.js></script></body></html>
